--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pokedex</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <main id="mainContainer">
+      <section id="displayIndividualPokemon">
+        <button id="back"><i class="fa-solid fa-arrow-left"></i></button>
+      </section>
       <h1>Pokedex</h1>
       <input type="text" id="searchPokemon" />
-      <button onclick="fetchPokemon">Submit</button>
+      <!-- <button onclick="fetchPokemon">Submit</button> -->
       <div id="content"></div>
     </main>
   </body>
