--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="back"><i class="fa-solid fa-arrow-left"></i></button>
       </section>
       <h1>Pokedex</h1>
-      <input type="text" id="searchPokemon" />
+      <!-- <input type="text" id="searchPokemon" /> -->
       <!-- <button onclick="fetchPokemon">Submit</button> -->
       <div id="content"></div>
     </main>
